Fix PyYAML vulnerability

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ python-editor = "~1.0.4"
 python-engineio = "~3.11.2"
 python-socketio = "~4.4.0"
 pytz = "~2019.3"
-PyYAML = "~5.2"
+PyYAML = ">=5.3"
 six = "~1.13.0"
 SQLAlchemy = "~1.3.12"
 thespian = "~3.9.11"
