--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "hydrus"
-version = "0.4.1"
+version = "0.4.2"
 description = "Hydra Ecosystem Flagship Server. Deploy REST data for Web 3.0"
 authors = ["Hydra Ecosystem"]
 license = "MIT License"
 
 [tool.poetry.dependencies]
-python = "^3.5.2"
+python = ">=3.6.8"
 alembic = "~1.0.10"
 aniso8601 = "~3.0.2"
 appdirs = "~1.4.3"
@@ -14,7 +14,7 @@ blinker = "~1.4"
 click = "~7.1.2"
 certifi = "~2019.11.28"
 Flask = "~1.1.1"
-Flask-Cors = "~3.0.8"
+Flask-Cors = ">=3.0.10"
 Flask-RESTful = "~0.3.7"
 Flask-SocketIO = "~4.2.1"
 gevent = "~20.12.0"
@@ -38,7 +38,7 @@ python-editor = "~1.0.4"
 python-engineio = "~3.11.2"
 python-socketio = "~4.4.0"
 pytz = "~2019.3"
-PyYAML = ">=5.3"
+PyYAML = ">=5.4"
 six = "~1.13.0"
 SQLAlchemy = "~1.3.12"
 thespian = "~3.9.11"
